--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
 							<div class="inner">
 
 								<section id="form">
-									<h4>Form</h4>
-									<form method="post" action="#">
+									<h4>Please fill out the information below.</h4>
+									<form method="post" action="#" netlify>
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall">
 												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
